# cmake-tutorial

./: CMakeLists.txt  config.h.in  main.cpp
tools/: CMakeLists.txt  tools.cpp  tools.h
